src/components/job-card.module.css
.jobCardContainer {
  list-style: none;
}

.jobCard {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  border: 1px solid #88a097;
  border-radius: 0.3rem;
}

.cardBg {
  background-color: #caeecd;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.2rem;
  border-top-left-radius: 0.3rem;
  border-top-right-radius: 0.3rem;
}

.content {
  padding: 1.32rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  background-color: #f8f8f8;
  border-bottom-right-radius: 1rem;
  border-bottom-left-radius: 1rem;
}

.company {
  display: flex;
  align-items: center;
  justify-content: space-between;

  .companyInfo {
    display: flex;
    gap: 0.5rem;
    align-items: center;
    justify-content: space-between;

    .companyContent {
      display: flex;
      gap: 0.5rem;
      flex-direction: column;
      margin-right: 1rem;

      .jobTitle {
        text-box: cap alphabetic;
        line-height: 1.2;
        font-size: 1.1rem;
      }

      .companyName {
        color: #535353;
      }
    }
  }
}

.title:hover {
  opacity: 0.8;
  text-decoration: underline;
  text-decoration-color: var(--black);
}

.info {
  width: fit-content;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.logo {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
}

.publishDate {
  margin-top: 0.5rem;
  color: #171717ab;
}

.jobCategories {
  list-style: none;
  display: flex;
  gap: 1rem;
  color: #535353;
  font-size: 0.9rem;
  margin-bottom: 0.5rem;
  text-decoration: underline;
  margin-top: 0.1rem;
  border-top: 1px solid #c5c5c5;
  padding-top: 0.5rem;
}

